@@ -1,3 +1,10 @@
+2009-04-05  Kai Tietz  <kai.tietz@onevision.com>
+
+	* coff-x86_64.c (bfd_pe_print_pdata): Define as
+	_bfd_pep_print_x64_pdata.
+	* libpei.h (_bfd_pep_print_x64_pdata): Add prototype.
+	* peXXigen.c (_bfd_pep_print_x64_pdata): New.
+
 2009-04-02  Sterling Augustine  <sterling@jaw.hq.tensilica.com>
 
 	* elf32-xtensa.c (relax_property_section): Always set r_offset 
